--- a/themes/anzhiyu/layout/includes/header/index.pug
+++ b/themes/anzhiyu/layout/includes/header/index.pug
@@ -29,6 +29,7 @@ header#page-header(class=`${isHomeClass}` style=home_index_img_bg)
         !=partial('includes/bili-banner/index')
       else
         include ./post-info.pug
+         img#post-top-bg(src=bg_img class='nolazyload')
         if theme.dynamicEffect && theme.dynamicEffect.postTopWave
           section.main-hero-waves-area.waves-area
             svg.waves-svg(xmlns='http://www.w3.org/2000/svg', xlink='http://www.w3.org/1999/xlink', viewBox='0 24 150 28', preserveAspectRatio='none', shape-rendering='auto')
