--- a/themes/anzhiyu/layout/page.pug
+++ b/themes/anzhiyu/layout/page.pug
@@ -27,6 +27,8 @@ block content
         include includes/page/music.pug
       when 'equipment'
         include includes/page/equipment.pug
+      when 'games'
+        include includes/page/games.pug
       default
         include includes/page/default-page.pug
 
