🎉 INT COMMIT: 优化

--- a/themes/anzhiyu/layout/page.pug
+++ b/themes/anzhiyu/layout/page.pug
@@ -29,6 +29,8 @@ block content
         include includes/page/equipment.pug
       when 'games'
         include includes/page/games.pug
+      when 'tool'
+        include includes/page/tool.pug
       default
         include includes/page/default-page.pug
 
