🎉 INT COMMIT: 优化

--- a/themes/anzhiyu/layout/includes/header/nav.pug
+++ b/themes/anzhiyu/layout/includes/header/nav.pug
@@ -4,7 +4,7 @@ nav#nav
     span#blog_name
       if theme.nav.enable
         .back-home-button
-          i.anzhiyufont.anzhiyu-icon-grip-vertical
+          i.anzhiyufont.anzhiyu-icon-bars 
           .back-menu-list-groups
             each group in theme.nav.menu
               .back-menu-list-group
