🎉 INT COMMIT: 优化

--- a/themes/anzhiyu/layout/includes/top/top.pug
+++ b/themes/anzhiyu/layout/includes/top/top.pug
@@ -102,8 +102,8 @@ if home_top_config.enable
             img.todayCard-cover(src=url_for(top_group_banner_image) onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'` alt='封面')
             .banner-button-group
               .banner-button(onclick='event.stopPropagation();event.preventDefault();anzhiyu.hideTodayCard();')
-                i.anzhiyufont.anzhiyu-icon-arrow-circle-right
-                span.banner-button-text 你侬我侬
+                i.anzhiyufont.anzhiyu-icon-circle-plus
+                span.banner-button-text 更多推荐
         
         link(rel="stylesheet", href=theme.home_top.banner.top_group_banner_css)
       
