--- a/themes/anzhiyu/layout/includes/header/nav.pug
+++ b/themes/anzhiyu/layout/includes/header/nav.pug
@@ -31,7 +31,7 @@ nav#nav
             i.anzhiyufont.anzhiyu-icon-train
       .nav-button#randomPost_button
         a.site-page(onclick='toRandomPost()', title='随机前往一个文章', href='javascript:void(0);')
-          i.anzhiyufont.anzhiyu-icon-dice
+          i.anzhiyufont.anzhiyu-icon-fan
       if (theme.algolia_search.enable || theme.local_search.enable || theme.docsearch.enable)
         div.nav-button#search-button
           a.site-page.social-icon.search(href='javascript:void(0);', title='搜索🔍' accesskey="s")
