🎉 INT COMMIT: 优化完成

--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -122,18 +122,8 @@
 }
 
 
-/* 首页文章“未读”位置调整 */
-/* .recent-post-info-top-tips .unvisited-post {
-    position: relative;
-    left: 400px;
-    top: -20px;
-    font-size: 10px !important;
-    color: #e0653f !important;
-} */
-
-
 /* 博客文章背景颜色美化 */
- .post{
+ [data-theme="light"] .post{
     background: linear-gradient(-45deg,
             #f7f1e8,
             #fdf8f6,
@@ -188,4 +178,5 @@
 #nav-right #travellings_button {
     display: none;
 }
+
 
