--- a/themes/anzhiyu/layout/includes/page/album.pug
+++ b/themes/anzhiyu/layout/includes/page/album.pug
@@ -1,6 +1,6 @@
 #album
   - let album_background = page.top_background
-  .author-content.author-content-item.album.single(style=`${album_background ? `background: url(${album_background}) top / cover no-repeat;` : ""}`)
+  .author-content.author-content-item.album.single(style = `background: url(${theme.album.top_background}) left 28% / cover no-repeat !important;`)
     .card-content
       .author-content-item-tips 相册集
       span.author-content-item-title 这里是我的相册集哦😯
