--- a/themes/anzhiyu/source/css/_page/homepage.styl
+++ b/themes/anzhiyu/source/css/_page/homepage.styl
@@ -25,6 +25,8 @@
       color: var(--anzhiyu-secondtext);
       font-size: .5rem;
       position: relative;
+      top: 4px;
+      color: #4468a3;
       &:visited
         color: var(--anzhiyu-card-bg);
     .recent-post-info
