--- a/themes/anzhiyu/source/css/_layout/relatedposts.styl
+++ b/themes/anzhiyu/source/css/_layout/relatedposts.styl
@@ -12,7 +12,7 @@
       display: inline-block
       overflow: hidden
       margin: 3px
-      width: calc(33.333% - 6px)
+      width: calc(100%)
       height: 200px
       background: $dark-black
       vertical-align: bottom
