🎉 INT COMMIT: 优化

--- a/themes/anzhiyu/layout/includes/anzhiyu/ai-info.pug
+++ b/themes/anzhiyu/layout/includes/anzhiyu/ai-info.pug
@@ -6,7 +6,7 @@ if (pageFillDescription && page.ai)
   .post-ai-description
     .ai-title
       i.anzhiyufont.anzhiyu-icon-bilibili
-      .ai-title-text AI-摘要
+      .ai-title-text 文章摘要
       if (switchBtn)
         #ai-Toggle 切换
       i.anzhiyufont.anzhiyu-icon-arrow-rotate-right
