--- a/themes/anzhiyu/source/css/_layout/post.styl
+++ b/themes/anzhiyu/source/css/_layout/post.styl
@@ -434,6 +434,7 @@ blockquote {
     font-size: 20px;
     line-height: 20px;
     height 20px
+    color: var(--anzhiyu-main);
   .anzhiyufont.anzhiyu-icon-circle-dot
     margin-left: auto;
     margin-right: 4px;
@@ -449,14 +450,16 @@ blockquote {
   .ai-title-text
     font-weight: bold;
     margin-left: 8px;
-
+    color: var(--anzhiyu-main);
+    
 #ai-tag
   font-size: 12px;
+  font-weight: 700;
   background-color: var(--anzhiyu-lighttext);
   color: rgba(255, 255, 255, 0.9);
-  border-radius: 4px;
+  border-radius: 25px;
   line-height: 1;
-  padding: 4px 5px;
+  padding: 5px 6px;
   cursor pointer
 #ai-Toggle 
   font-size: 12px;
