--- a/themes/anzhiyu/source/css/_layout/post.styl
+++ b/themes/anzhiyu/source/css/_layout/post.styl
@@ -363,6 +363,7 @@ blockquote {
       font-size: 12px;
       .post-copyright-info
         padding-left: 0;
+        margin-top: 12px;
         color: var(--anzhiyu-secondtext);
         overflow: hidden;
         display: -webkit-box;
