--- a/themes/anzhiyu/source/css/_page/homepage.styl
+++ b/themes/anzhiyu/source/css/_page/homepage.styl
@@ -46,7 +46,8 @@
         .newPost 
           display: flex;
           color: var(--anzhiyu-secondtext);
-          font-size: .5rem;
+          font-size: 12px;
+          color: var(--anzhiyu-main);
           position: relative;
           margin-right: 8px;
       .article-title
