--- a/themes/anzhiyu/source/css/_global/loading.styl
+++ b/themes/anzhiyu/source/css/_global/loading.styl
@@ -28,7 +28,7 @@ if hexo-config('preloader')
     .loading-image-dot
       width: 30px;
       height: 30px;
-      background: #6bdf8f;
+      background: #e9b9ab;;
       position: absolute;
       border-radius: 50%;
       border: 6px solid #fff;
