--- a/themes/anzhiyu/source/css/_layout/relatedposts.styl
+++ b/themes/anzhiyu/source/css/_layout/relatedposts.styl
@@ -5,6 +5,8 @@
     margin-bottom: 5px
     font-weight: 700
     font-size: 1.43em
+    padding-right: 7px
+    color: var(--anzhiyu-main)
 
   & > .relatedPosts-list
     & > div
