优化图片速度--大改

--- a/themes/anzhiyu/source/css/_page/tool.styl
+++ b/themes/anzhiyu/source/css/_page/tool.styl
@@ -10,7 +10,7 @@ body[data-type="tool"] #page .page-title
 
 .author-content.author-content-item.toolPage {
     height: 23rem;
-    background: url(https://cdnjson.com/images/2023/11/13/image458977f6b2e0c6ad.png) no-repeat top;
+    background: url(https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/tool.png) no-repeat top;
     background-size: cover;
     color: var(--anzhiyu-white);
     overflow: hidden;
