--- a/themes/anzhiyu/source/css/_page/tool.styl
+++ b/themes/anzhiyu/source/css/_page/tool.styl
@@ -10,7 +10,7 @@ body[data-type="tool"] #page .page-title
 
 .author-content.author-content-item.toolPage {
     height: 23rem;
-    background: url(https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/tool.png) no-repeat top;
+    background: url(https://s3.qjqq.cn/37/655593e8bae59.webp!color) no-repeat top;
     background-size: cover;
     color: var(--anzhiyu-white);
     overflow: hidden;
