--- a/themes/anzhiyu/source/css/_page/updatelog.styl
+++ b/themes/anzhiyu/source/css/_page/updatelog.styl
@@ -11,7 +11,7 @@ body[data-type="updatelog"] #page .page-title
 
 .author-content.author-content-item.updatelogPage {
     height: 23rem;
-    background: url(https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/updatelog.png) no-repeat top;
+    background: url(https://s3.qjqq.cn/37/655596fc6fee7.webp!color) no-repeat top;
     background-size: cover;
     color: var(--anzhiyu-white);
     overflow: hidden;
