--- a/themes/anzhiyu/source/css/_tags/checkbox.styl
+++ b/themes/anzhiyu/source/css/_tags/checkbox.styl
@@ -17,7 +17,7 @@
     border-radius 2px
     flex-shrink 0
     margin-right 8px
-    border 2px solid #2196f3
+    border 2px solid #e9b9ab
     pointer-events: none
   input[type="checkbox"]:before
     left 1px
@@ -43,7 +43,7 @@
     -o-transform rotate(40deg)
     transition-delay 0.25s
   input[type="checkbox"]:checked
-    background #2196f3
+    background #e9b9ab
     &:before
       left 0
       top 7px
@@ -167,20 +167,20 @@
         background #ffbd2b
   &.cyan
     input
-      border-color #1bcdfc
+      border-color #e9b9ab
     input[type="checkbox"]:checked
-      background #1bcdfc
+      background #e9b9ab
     input[type="radio"]:checked
       &:before
-        background #1bcdfc
+        background #e9b9ab
   &.blue
     input
-      border-color #2196f3
+      border-color #e9b9ab
     input[type="checkbox"]:checked
-      background #2196f3
+      background #e9b9ab
     input[type="radio"]:checked
       &:before
-        background #2196f3
+        background #e9b9ab
   p
     display inline-block
     margin-top 2px !important
