--- a/themes/anzhiyu/source/css/_third-party/twikoo.styl
+++ b/themes/anzhiyu/source/css/_third-party/twikoo.styl
@@ -41,6 +41,8 @@ if hexo-config('comments.use') == 'Twikoo'
     background-color: var(--anzhiyu-card-bg);
 
   #twikoo 
+    .tk-comments > .tk-submit
+      overflow: visible !important;
     .tk-comments
       .OwO .OwO-body
         border: var(--style-border-always) !important;
