--- a/themes/anzhiyu/source/css/_layout/banner.styl
+++ b/themes/anzhiyu/source/css/_layout/banner.styl
@@ -6,8 +6,9 @@
   flex-direction: column;
 
 .banners-title-big 
-  font-size: 36px;
+  font-size: 30px;
   line-height: 1;
+  letter-spacing: 2.5px;
   font-weight: bold;
   margin-bottom: 8px;
 
