--- a/themes/anzhiyu/layout/includes/top/top.pug
+++ b/themes/anzhiyu/layout/includes/top/top.pug
@@ -2,6 +2,13 @@
 - let { title, subTitle, siteText,default_descr } = home_top_config
 if home_top_config.enable
   #home_top
+    section.sun-area
+      i.sun
+        i.satellite
+        i.satellite
+      i.flow
+      i.flow
+      i.flow     
     .swiper_container_card(style='height: auto;width: 100%')
       #bannerGroup
         #random-banner
@@ -9,9 +16,11 @@ if home_top_config.enable
             canvas#peoplecanvas
           else 
             .banners-title
+              
               .banners-title-big=title
               .banners-title-big=subTitle
               .banners-title-small=siteText
+              
             include ../anzhiyu/tags-group-all.pug
 
           a#random-hover(href='javascript:toRandomPost()')
