--- a/themes/anzhiyu/layout/includes/header/nav.pug
+++ b/themes/anzhiyu/layout/includes/header/nav.pug
@@ -17,7 +17,13 @@ nav#nav
       a#site-name(href=url_for('/') accesskey="h")
         .title #[=config.title]
         i.anzhiyufont.anzhiyu-icon-house-chimney
-
+    //- section.sun-area
+    //-   i.sun
+    //-     i.satellite
+    //-     i.satellite
+    //-   i.flow
+    //-   i.flow
+    //-   i.flow       
     div.mask-name-container
       #name-container
         a#page-name(href="javascript:anzhiyu.scrollToDest(0, 500)") PAGE_NAME
