--- a/themes/anzhiyu/layout/includes/anzhiyu/log-js.pug
+++ b/themes/anzhiyu/layout/includes/anzhiyu/log-js.pug
@@ -17,7 +17,7 @@ script.
     const dnum = Math.floor(days);
     const ascll = [
       `欢迎来到我们的世界!`,
-      `恰沐春风共同游，终只叹，木已舟。`,
+      `保持善良与温柔，追求上进与美好。`,
       ` `,
       "已上线",
       dnum,
