--- a/themes/anzhiyu/source/css/_layout/nav.styl
+++ b/themes/anzhiyu/source/css/_layout/nav.styl
@@ -418,6 +418,7 @@
 .back-home-button:hover
   background var(--anzhiyu-main)
   color var(--anzhiyu-white) !important
+  border-radius: 50%
 
 .back-home-button
   display flex
