--- a/themes/anzhiyu/source/css/_layout/head.styl
+++ b/themes/anzhiyu/source/css/_layout/head.styl
@@ -103,7 +103,7 @@
     if hexo-config('mainTone.enable')
       background-color: var(--anzhiyu-bar-background)
     else 
-      background-color: transparent;
+      background-color: transparent
 
     // #nav
     #nav
@@ -765,7 +765,7 @@ if hexo-config('dynamicEffect') && hexo-config('dynamicEffect.postTopWave')
     .anzhiyu-icon-hashtag:before 
       font-size: 17px;
     .anzhiyu-icon-location-dot
-      margin-right: 7px
+      margin-right: 4px
 #post
   #post-info
     #post-firstinfo
