--- a/themes/anzhiyu/source/css/_page/about.styl
+++ b/themes/anzhiyu/source/css/_page/about.styl
@@ -21,33 +21,45 @@ body[data-type='about'] #web_bg {
   background: var(--anzhiyu-background);
 }
 
-#about-page
+#about-page {
   padding-top: 1rem;
-  .author-box
+
+  .author-box {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0 0 16px 0;
-    .author-tag-left
+
+    .author-tag-left {
       display: flex;
       flex-direction: column;
       align-items: flex-end;
-      +maxWidth768()
-        display: none
-      .author-tag:first-child, 
-      .author-tag:last-child
-        margin-right: -16px
-    .author-tag-right
+
+      +maxWidth768() {
+        display: none;
+      }
+
+      .author-tag:first-child, .author-tag:last-child {
+        margin-right: -16px;
+      }
+    }
+
+    .author-tag-right {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      +maxWidth768()
-        display: none
-      .author-tag:first-child, 
-      .author-tag:last-child
-        margin-left: -16px
-    .author-tag
-      transform: translate(0,-4px);
+
+      +maxWidth768() {
+        display: none;
+      }
+
+      .author-tag:first-child, .author-tag:last-child {
+        margin-left: -16px;
+      }
+    }
+
+    .author-tag {
+      transform: translate(0, -4px);
       padding: 1px 8px;
       background: var(--anzhiyu-card-bg);
       border: var(--style-border-always);
@@ -57,16 +69,25 @@ body[data-type='about'] #web_bg {
       font-weight: 700;
       box-shadow: var(--anzhiyu-shadow-lightblack);
       animation: 6s ease-in-out 0s infinite normal none running floating;
-      &:nth-child(1)
-        animation-delay: 0s;
-      &:nth-child(2)
-        animation-delay: .6s;
-      &:nth-child(3)
-        animation-delay: 1.2s;
-      &:nth-child(4)
-        animation-delay: 1.8s;
 
-    .author-img
+      &:nth-child(1) {
+        animation-delay: 0s;
+      }
+
+      &:nth-child(2) {
+        animation-delay: 0.6s;
+      }
+
+      &:nth-child(3) {
+        animation-delay: 1.2s;
+      }
+
+      &:nth-child(4) {
+        animation-delay: 1.8s;
+      }
+    }
+
+    .author-img {
       margin: 0 30px;
       border-radius: 50%;
       width: 180px;
@@ -74,35 +95,50 @@ body[data-type='about'] #web_bg {
       position: relative;
       background: var(--anzhiyu-secondbg);
       user-select: none;
-      transition: .3s;
-      +maxWidth768()
+      transition: 0.3s;
+
+      +maxWidth768() {
         width: 120px;
         height: 120px;
-      img
+      }
+
+      img {
         border-radius: 50%;
         overflow: hidden;
         width: 180px;
         height: 180px;
-        +maxWidth768()
+
+        +maxWidth768() {
           width: 120px;
           height: 120px;
-      &:hover
+        }
+      }
+
+      &:hover {
         transform: scale(1.1);
-      &:before
+      }
+
+      &:before {
         content: '';
         transition: 1s;
         width: 30px;
         height: 30px;
-        background: var(--anzhiyu-main);
+        background: var(--anzhiyu-green);
         position: absolute;
         border-radius: 50%;
         border: 5px solid var(--anzhiyu-background);
         bottom: 5px;
         right: 10px;
         z-index: 2;
-        +maxWidth768()
+
+        +maxWidth768() {
           bottom: -5px;
           right: -5px;
+        }
+      }
+    }
+  }
+}
 
 .author-content {
   display: flex;
@@ -320,21 +356,24 @@ body[data-type='about'] #web_bg {
 
 .author-content-item .card-content .banner-button-group .banner-button {
   height: 40px;
-  width: 140px;
   border-radius: 20px;
   justify-content: center;
-  background: var(--anzhiyu-card-bg);
-  color: var(--font-color);
-  display: flex;
+  background: var(--anzhiyu-white-op);
+  color: var(--anzhiyu-white);
+  display: inline-flex;
   align-items: center;
   z-index: 1;
   transition: 0.3s;
   cursor: pointer;
   border-bottom: 0 !important;
+  backdrop-filter: saturate(180%) blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  transform: translateZ(0);
 }
 
 .author-content-item .card-content .banner-button-group .banner-button i, .author-content-item .card-content .banner-button-group .banner-button svg {
-  font-size: 1rem;
+  margin-right: 0.25rem;
+  font-size: 22px;
 }
 
 .author-content-item .card-content .banner-button-group .banner-button .banner-button-text {
@@ -342,8 +381,8 @@ body[data-type='about'] #web_bg {
 }
 
 #about-page .author-content-item .card-content .banner-button-group .banner-button i, #about-page .author-content-item .card-content .banner-button-group .banner-button svg {
-  font-size: 1.5rem;
-  margin-right: 0;
+  font-size: 22px;
+  margin-right: 0.25rem;
   height: 40px;
   max-width: 40px;
   display: flex;
@@ -475,7 +514,7 @@ body[data-type='about'] #web_bg {
 
 .author-content-item.selfInfo .selfInfo-title {
   opacity: 0.8;
-  ffont-size: 12px;
+  font-size: 12px;
   line-height: 1;
   margin-bottom: 8px;
 }
@@ -795,10 +834,11 @@ body[data-type='about'] #web_bg {
     background: none;
     padding: 0;
     width: auto;
+    backdrop-filter: unset;
   }
 
   .author-content-item .card-content .banner-button-group .banner-button i, .author-content-item .card-content .banner-button-group .banner-button svg {
-    margin-right: 0;
+    margin-right: 0.25rem;
     font-size: 1.5rem;
     background: white;
     border-radius: 50%;
@@ -809,6 +849,7 @@ body[data-type='about'] #web_bg {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: var(--anzhiyu-fontcolor);
   }
 
   .author-content-item .card-content .banner-button-group .banner-button:hover i {
