--- a/themes/anzhiyu/layout/includes/header/nav.pug
+++ b/themes/anzhiyu/layout/includes/header/nav.pug
@@ -17,17 +17,13 @@ nav#nav
       a#site-name(href=url_for('/') accesskey="h")
         .title #[=config.title]
         i.anzhiyufont.anzhiyu-icon-house-chimney
-    //- section.sun-area
-    //-   i.sun
-    //-     i.satellite
-    //-     i.satellite
-    //-   i.flow
-    //-   i.flow
-    //-   i.flow       
+      if (theme.nav.clock)
+        !=partial('includes/anzhiyu/clock', {}, {cache: true})
+
     div.mask-name-container
       #name-container
         a#page-name(href="javascript:anzhiyu.scrollToDest(0, 500)") PAGE_NAME
-      
+
     #menus
       !=partial('includes/header/menu_item', {}, {cache: true})
     #nav-right
@@ -37,29 +33,28 @@ nav#nav
             i.anzhiyufont.anzhiyu-icon-train
       .nav-button#randomPost_button
         a.site-page(onclick='toRandomPost()', title='随机前往一个文章', href='javascript:void(0);')
-          i.anzhiyufont.anzhiyu-icon-fan
+          i.anzhiyufont.anzhiyu-icon-dice
       if (theme.algolia_search.enable || theme.local_search.enable || theme.docsearch.enable)
         div.nav-button#search-button
           a.site-page.social-icon.search(href='javascript:void(0);', title='搜索🔍' accesskey="s")
             i.anzhiyufont.anzhiyu-icon-magnifying-glass
             span=' '+_p('search.title')
-      
-      input#center-console(type="checkbox")
-      if theme.centerConsole
+
+      if theme.centerConsole.enable
+        input#center-console(type="checkbox")
         label.widget(for="center-console" title=_p("中控台") onclick="anzhiyu.switchConsole();")
           i.left
           i.widget.center
           i.widget.right
-        
-        !=partial('includes/anzhiyu/console', {}, {cache:true})
+
+      !=partial('includes/anzhiyu/console', {}, {cache:true})
 
       div.nav-button#nav-totop
         a.totopbtn(href='javascript:void(0);')
           i.anzhiyufont.anzhiyu-icon-arrow-up
           span#percent(onclick="anzhiyu.scrollToDest(0,500)") 0
-      
+
       #toggle-menu
         a.site-page(href='javascript:void(0);' title="切换")
           i.anzhiyufont.anzhiyu-icon-bars
-
 
