--- a/themes/anzhiyu/source/css/_highlight/highlight.styl
+++ b/themes/anzhiyu/source/css/_highlight/highlight.styl
@@ -1,245 +1,311 @@
-$highlight_theme = hexo-config('highlight_theme')
-wordWrap = $highlight_enable && !$highlight_line_number && hexo-config('code_word_wrap')
-wordWrapPrismjs = $prismjs_enable && !$prismjs_line_number && hexo-config('code_word_wrap')
+$highlight_theme = hexo-config('highlight_theme');
+wordWrap = $highlight_enable && !$highlight_line_number && hexo-config('code_word_wrap');
+wordWrapPrismjs = $prismjs_enable && !$prismjs_line_number && hexo-config('code_word_wrap');
 
-@require 'theme'
+@require 'theme';
 
-:root
-  --hl-color: $highlight-foreground
-  --hl-bg: $highlight-background
-  --hltools-bg: $highlight-tools.bg-color
-  --hltools-color: $highlight-tools.color
-  --hlnumber-bg: $highlight-gutter.bg-color
-  --hlnumber-color: $highlight-gutter.color
-  --hlscrollbar-bg: $highlight-scrollbar
-  --hlexpand-bg: linear-gradient(180deg, rgba($highlight-background, .6), rgba($highlight-background, .9))
-[data-theme='dark']
-  --hl-color: alpha(#FFFFFF, .7)
-  --hl-bg: lighten(#121212, 2)
-  --hltools-bg: lighten(#121212, 3)
-  --hltools-color: #90a4ae
-  --hlnumber-bg: lighten(#121212, 2)
-  --hlnumber-color: alpha(#FFFFFF, .4)
-  --hlscrollbar-bg: lighten(#121212, 5)
-  --hlexpand-bg: linear-gradient(180deg, rgba(lighten(#121212, 2), .6), rgba(lighten(#121212, 2), .9))
+:root {
+  --hl-color: $highlight-foreground;
+  --hl-bg: $highlight-background;
+  --hltools-bg: $highlight-tools.bg-color;
+  --hltools-color: $highlight-tools.color;
+  --hlnumber-bg: $highlight-gutter.bg-color;
+  --hlnumber-color: $highlight-gutter.color;
+  --hlscrollbar-bg: $highlight-scrollbar;
+  --hlexpand-bg: linear-gradient(180deg, rgba($highlight-background, 0.6), rgba($highlight-background, 0.9));
+}
 
-if $highlight_enable
-  @require 'highlight/index'
+[data-theme='dark'] {
+  --hl-color: alpha(#FFFFFF, 0.7);
+  --hl-bg: lighten(#121212, 2);
+  --hltools-bg: lighten(#121212, 3);
+  --hltools-color: #90a4ae;
+  --hlnumber-bg: lighten(#121212, 2);
+  --hlnumber-color: alpha(#FFFFFF, 0.4);
+  --hlscrollbar-bg: lighten(#121212, 5);
+  --hlexpand-bg: linear-gradient(180deg, rgba(lighten(#121212, 2), 0.6), rgba(lighten(#121212, 2), 0.9));
+}
 
-if $prismjs_enable
-  @require 'prismjs/index'
+if ($highlight_enable) {
+  @require 'highlight/index';
+}
 
-$code-block
-  overflow: auto
-  margin: 0 0 20px
-  padding: 0
-  if $highlight_theme == 'light' || ($highlight_theme == 'mac light')
-    background: var(--anzhiyu-card-bg)
+if ($prismjs_enable) {
+  @require 'prismjs/index';
+}
+
+$code-block {
+  overflow: auto;
+  margin: 0 0 20px;
+  padding: 0;
+
+  if ($highlight_theme == 'light' || ($highlight_theme == 'mac light')) {
+    background: var(--anzhiyu-card-bg);
     border: var(--style-border-always);
-  else
-    background: var(--hl-bg)
-  color: var(--hl-color)
-  line-height: $line-height-code-block
+  } else {
+    background: var(--hl-bg);
+  }
 
-  if (wordWrap || wordWrapPrismjs)
-    counter-reset: line
-    white-space: pre-wrap
+  color: var(--hl-color);
+  line-height: $line-height-code-block;
 
-#article-container
-  pre,
-  code
-    font-size: $code-font-size
-    font-family: $code-font-family !important
+  if (wordWrap || wordWrapPrismjs) {
+    counter-reset: line;
+    white-space: pre-wrap;
+  }
+}
 
-  code
-    padding: 2px 4px
-    background: $code-background
-    color: $code-foreground
+#article-container {
+  pre, code {
+    font-size: $code-font-size;
+    font-family: $code-font-family !important;
+  }
 
-  pre
-    @extend $code-block
-    padding: 10px 20px
+  code {
+    padding: 2px 4px;
+    background: $code-background;
+    color: $code-foreground;
+  }
 
-    code
-      padding: 0
-      background: none
-      color: var(--hl-color)
-      text-shadow: none
+  pre {
+    @extend $code-block;
+    padding: 10px 20px;
 
-  figure.highlight
-    @extend $code-block
-    position: relative
+    code {
+      padding: 0;
+      background: none;
+      color: var(--hl-color);
+      text-shadow: none;
+    }
+  }
 
-    pre
-      margin: 0
-      padding: 8px 0
-      border: none
+  figure.highlight {
+    @extend $code-block;
+    position: relative;
 
-    figcaption,
-    .caption
-      padding: 6px 0 2px 14px
-      font-size: $code-font-size
-      line-height: 1em
+    pre {
+      margin: 0;
+      padding: 8px 0;
+      border: none;
+    }
 
-      a
-        float: right
-        padding-right: 10px
-        color: var(--hl-color)
+    figcaption, .caption {
+      padding: 6px 0 2px 14px;
+      font-size: $code-font-size;
+      line-height: 1em;
 
-        &:hover
-          border-bottom-color: var(--hl-color)
+      a {
+        float: right;
+        padding-right: 10px;
+        color: var(--hl-color);
 
-  .highlight-tools
-    position: relative
-    display: flex
-    align-items: center
-    overflow: hidden
-    min-height: 24px
-    height: 2.15em
-    background: var(--hltools-bg)
-    color: var(--hltools-color)
-    font-size: $code-font-size
-    if $highlight_theme == 'light' || ($highlight_theme == 'mac light')
+        &:hover {
+          border-bottom-color: var(--hl-color);
+        }
+      }
+    }
+  }
+
+  .highlight-tools {
+    position: relative;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    min-height: 24px;
+    height: 2.15em;
+    background: var(--hltools-bg);
+    color: var(--hltools-color);
+    font-size: $code-font-size;
+
+    if ($highlight_theme == 'light' || ($highlight_theme == 'mac light')) {
       border-bottom: var(--style-border-always);
+    }
 
-    &.closed
-      & ~ *
-        display: none
+    &.closed {
+      if ($highlight_theme == 'light' || ($highlight_theme == 'mac light')) {
+        border-bottom: 1px solid transparent;
+        height: calc(2.15em - 1px);
+      }
 
-      .expand
-        transition: all .3s
-        transform: rotate(-90deg) !important
+      & ~ * {
+        display: none;
+      }
 
-    .expand
-      position: absolute
-      padding: .57em .7em
-      cursor: pointer
-      transition: transform .3s
+      .expand {
+        transition: all 0.3s;
+        transform: rotate(-90deg) !important;
+      }
+    }
 
-      & + .code-lang
-        left: 1.7em
+    .expand {
+      position: absolute;
+      padding: 0.57em 0.7em;
+      cursor: pointer;
+      transition: transform 0.3s;
 
-    .code-lang
-      position: absolute
-      left: 14px
-      text-transform: uppercase
-      font-weight: bold
-      font-size: 1.15em
-      user-select: none
+      & + .code-lang {
+        left: 1.7em;
+      }
+    }
 
-    .copy-notice
-      position: absolute
-      right: 2.4em
-      opacity: 0
-      transition: opacity .4s
+    .code-lang {
+      position: absolute;
+      left: 14px;
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 1.15em;
+      user-select: none;
+    }
 
-    .copy-button
-      position: absolute
-      right: 14px
-      cursor: pointer
-      transition: color .2s
+    .copy-notice {
+      position: absolute;
+      right: 2.4em;
+      opacity: 0;
+      transition: opacity 0.4s;
+    }
 
-      &:hover
-        color: var(--anzhiyu-main)
+    .copy-button {
+      position: absolute;
+      right: 14px;
+      cursor: pointer;
+      transition: color 0.2s;
 
-  .gutter
-    user-select: none
+      &:hover {
+        color: var(--anzhiyu-main);
+      }
+    }
+  }
 
-  .gist table
-    width: auto
+  .gutter {
+    user-select: none;
+  }
 
-    td
-      border: none
+  .gist table {
+    width: auto;
 
-  if $highlight_theme == 'mac' || ($highlight_theme == 'mac light')
-    figure.highlight
-      margin: 0 0 24px
-      border-radius: 7px
-      box-shadow: 0 5px 10px 0 $highlight-mac-border
-      -webkit-transform: translateZ(0)
+    td {
+      border: none;
+    }
+  }
 
-      .highlight-tools
-        &:after
-          position: absolute
-          left: 14px
-          width: 12px
-          height: 12px
-          border-radius: 50%
-          background: #fc625d
-          box-shadow: 20px 0 #fdbc40, 40px 0 #35cd4b
-          content: ' '
+  if ($highlight_theme == 'mac' || ($highlight_theme == 'mac light')) {
+    figure.highlight {
+      margin: 0 0 24px;
+      border-radius: 7px;
+      box-shadow: 0 5px 10px 0 $highlight-mac-border;
+      -webkit-transform: translateZ(0);
 
-        .expand
-          right: 0
+      .highlight-tools {
+        &:after {
+          position: absolute;
+          left: 14px;
+          width: 12px;
+          height: 12px;
+          border-radius: 50%;
+          background: #fc625d;
+          box-shadow: 20px 0 #fdbc40, 40px 0 #35cd4b;
+          content: ' ';
+        }
 
-          &.closed
-            transition: all .3s
-            transform: rotate(90deg) !important
+        .expand {
+          right: 0;
 
-          & ~ .copy-notice
-            right: 3.45em
+          &.closed {
+            transition: all 0.3s;
+            transform: rotate(90deg) !important;
+          }
 
-          & ~ .copy-button
-            right: 2.1em
+          & ~ .copy-notice {
+            right: 3.45em;
+          }
 
-        .code-lang
-          left: 75px
+          & ~ .copy-button {
+            right: 2.1em;
+          }
+        }
 
-  if hexo-config('highlight_height_limit')
-    .code-expand-btn
-      position: absolute
-      bottom: 0px
-      z-index: 10
-      width: 100%
-      transition: all 0.3s
+        .code-lang {
+          left: 75px;
+        }
+      }
+    }
+  }
+
+  if (hexo-config('highlight_height_limit')) {
+    .code-expand-btn {
+      position: absolute;
+      bottom: 0px;
+      z-index: 10;
+      width: 100%;
+      transition: all 0.3s;
       font-size: 20px;
-      if $highlight_theme == 'light' || ($highlight_theme == 'mac light')
-        background: var(--anzhiyu-secondbg)
-      else
-        background: var(--hlexpand-bg)
-      text-align: center
-      font-size: $code-font-size
-      cursor: pointer
+
+      if ($highlight_theme == 'light' || ($highlight_theme == 'mac light')) {
+        background: var(--anzhiyu-secondbg);
+      } else {
+        background: var(--hlexpand-bg);
+      }
+
+      text-align: center;
+      font-size: $code-font-size;
+      cursor: pointer;
       transform: translateZ(0);
       position: absolute;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 32px;
-      font-size: 16px
-      if $highlight_theme == 'light' || ($highlight_theme == 'mac light')
-        &:hover
+      font-size: 16px;
+
+      if ($highlight_theme == 'light' || ($highlight_theme == 'mac light')) {
+        &:hover {
           background: var(--anzhiyu-main);
-          i
+
+          i {
             color: var(--anzhiyu-white);
+          }
+        }
+      }
 
-      i
-        if $highlight_theme == 'light' || ($highlight_theme == 'mac light')
-          color: var(--anzhiyu-fontcolor)
-        else 
-          color: var(--hlnumber-color)
-        animation: 1.2s ease 0s infinite normal none running code-expand-key
+      i {
+        if ($highlight_theme == 'light' || ($highlight_theme == 'mac light')) {
+          color: var(--anzhiyu-fontcolor);
+        } else {
+          color: var(--hlnumber-color);
+        }
 
-      &.expand-done
-        transform: rotate(180deg)
+        animation: 1.2s ease 0s infinite normal none running code-expand-key;
+      }
+
+      &.expand-done {
+        transform: rotate(180deg);
         transition: all 0s, background 0.3s;
 
-        & + table,
-        & + pre
-          margin-bottom: 1.8em
+        & + table, & + pre {
+          margin-bottom: 1.8em;
+        }
+      }
 
-      &:not(.expand-done)
-        & ~ table,
-        & ~ pre
-          overflow: hidden
-          height: unit(hexo-config('highlight_height_limit'), px)
+      &:not(.expand-done) {
+        & ~ table, & ~ pre {
+          overflow: hidden;
+          height: unit(hexo-config('highlight_height_limit'), px);
+        }
+      }
+    }
+  }
+}
 
-@keyframes code-expand-key
-  0%
-    opacity: .6
+@keyframes code-expand-key {
+  0% {
+    opacity: 0.6;
+  }
 
-  50%
-    opacity: .1
+  50% {
+    opacity: 0.1;
+  }
 
-  100%
-    opacity: .6
+  100% {
+    opacity: 0.6;
+  }
+}
