--- a/themes/anzhiyu/source/css/_layout/aside.styl
+++ b/themes/anzhiyu/source/css/_layout/aside.styl
@@ -104,7 +104,7 @@
           width: 26px;
           height: 26px;
           border-radius: 0px;
-          transition: 0s;
+          transition: 0s
 
     .card-info-social-icons
       margin: 0;
@@ -321,6 +321,7 @@
   #card-toc
     +minWidth901()
       right: 0 !important
+      max-height: calc(100vh - 100px);
 
     +maxWidth1200()
       position: fixed
@@ -417,7 +418,7 @@
 
 .avatar-img
   width: 118px;
-  height: 118px;
+  height 118px
   right: 0;
   top: 0;
   border-radius: 500px;
