--- a/themes/anzhiyu/layout/includes/top/top.pug
+++ b/themes/anzhiyu/layout/includes/top/top.pug
@@ -2,6 +2,7 @@
 - let { title, subTitle, siteText,default_descr } = home_top_config
 if home_top_config.enable
   #home_top
+    
     .swiper_container_card(style='height: auto;width: 100%')
       #bannerGroup
         #random-banner
@@ -12,6 +13,13 @@ if home_top_config.enable
               .banners-title-big=title
               .banners-title-big=subTitle
               .banners-title-small=siteText
+            section.sun-area
+              i.sun
+                i.satellite
+                i.satellite
+              i.flow
+              i.flow
+              i.flow
             include ../anzhiyu/tags-group-all.pug
 
           a#random-hover(href='javascript:toRandomPost()')
